Added coordinates to the registration form

--- a/app/src/main/res/layout/fragment_register_client.xml
+++ b/app/src/main/res/layout/fragment_register_client.xml
@@ -73,6 +73,10 @@ android:alpha="0.95"
                 android:id="@+id/latitude"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/et_bg"
+                android:enabled="false"
+                android:layout_marginTop="10dp"
+                android:text=" Loading Latitude..."
                 android:layout_below="@id/parity"
                 android:hint="Loading Latitude" />
 
@@ -80,6 +84,10 @@ android:alpha="0.95"
                 android:id="@+id/longitude"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/et_bg"
+                android:enabled="false"
+                android:layout_marginTop="10dp"
+                android:text="loading Longitude..."
                 android:layout_below="@id/latitude"
                 android:hint="Loading Latitude" />
 
