--- a/app/src/main/res/layout/fragment_register_client.xml
+++ b/app/src/main/res/layout/fragment_register_client.xml
@@ -137,7 +137,7 @@ android:alpha="0.95"
                 android:layout_centerHorizontal="true"
                 android:layout_below="@id/birthDate"
                 android:layout_marginTop="10dp"
-                android:text="SAVE" />
+                android:text="REGISTER" />
         </LinearLayout>
 
 
