--- a/app/src/main/res/layout/single_form_recycler_view.xml
+++ b/app/src/main/res/layout/single_form_recycler_view.xml
@@ -4,7 +4,9 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     >
-
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -39,13 +41,6 @@
                 android:layout_margin="1dp"
                 android:textColor="@color/colorBlack" />
 
-            <TextView
-                android:id="@+id/recycler_dob"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_margin="1dp"
-                android:textColor="@color/colorBlack" />
             <Button
                 android:id="@+id/assessClient"
                 android:layout_width="match_parent"
@@ -54,5 +49,5 @@
                 android:text="assess" />
         </TableRow>
     </TableLayout>
-    <!--</ScrollView>-->
+    </ScrollView>
 </LinearLayout>
