--- a/app/src/main/res/layout/single_form_recycler_view.xml
+++ b/app/src/main/res/layout/single_form_recycler_view.xml
@@ -9,8 +9,7 @@
         android:layout_height="wrap_content">
     <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-                      >
+        android:layout_height="match_parent">
 
         <TableRow
             android:layout_width="match_parent"
@@ -19,26 +18,26 @@
 
             <TextView
                 android:id="@+id/recycler_fname"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:layout_margin="1dp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:gravity="left"
                 android:textColor="@color/colorBlack" />
 
             <TextView
                 android:id="@+id/recycler_lname"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:layout_margin="1dp"
+                android:gravity="left"
                 android:textColor="@color/colorBlack" />
 
             <TextView
                 android:id="@+id/recycler_idnum"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:layout_margin="1dp"
+                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:gravity="left"
                 android:textColor="@color/colorBlack" />
 
             <Button
