--- a/app/src/main/res/layout/fragment_forms_by_user.xml
+++ b/app/src/main/res/layout/fragment_forms_by_user.xml
@@ -10,13 +10,31 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="horizontal">
         <Button
             android:id="@+id/addNew"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="5dp"
             android:text="Add New" />
+        <Button
+            android:id="@+id/getForms"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="5dp"
+            android:text="Get Forms" />
+        <Button
+            android:id="@+id/myAssessments"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="5dp"
+            android:text="My Assessments" />
+        <Button
+            android:id="@+id/syncData"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="5dp"
+            android:text="Sync Data" />
 
 
     </LinearLayout>
