--- a/app/src/main/res/layout/fragment_forms_by_user.xml
+++ b/app/src/main/res/layout/fragment_forms_by_user.xml
@@ -82,6 +82,13 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/statusHeader"
+            android:layout_weight="0.5"
+            android:text="Status"
+            android:textColor="@android:color/white" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Action"
             android:textColor="@android:color/white" />
