--- a/app/src/main/res/layout/fragment_register_client.xml
+++ b/app/src/main/res/layout/fragment_register_client.xml
@@ -128,6 +128,11 @@ android:alpha="0.95"
                 android:layout_below="@id/dobPicker"
                 android:enabled="false"
                 android:hint="Set Birth Date" />
+            <CheckBox
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Mark As Finalised"
+                android:id="@+id/markAsFinalised"    />
 
             <Button
                 android:id="@+id/saveData"
