--- a/app/src/main/res/layout/single_form_recycler_view.xml
+++ b/app/src/main/res/layout/single_form_recycler_view.xml
@@ -39,6 +39,13 @@
                 android:layout_width="0dp"
                 android:gravity="left"
                 android:textColor="@color/colorBlack" />
+            <TextView
+                android:id="@+id/status"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:gravity="left"
+                android:textColor="@color/grey" />
 
             <Button
                 android:id="@+id/assessClient"
@@ -46,6 +53,13 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="5dp"
                 android:text="assess" />
+
+            <Button
+                android:id="@+id/edit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="5dp"
+                android:text="edit" />
         </TableRow>
     </TableLayout>
     </ScrollView>
