--- a/app/src/main/res/layout/fragment_assessment_by_user.xml
+++ b/app/src/main/res/layout/fragment_assessment_by_user.xml
@@ -5,30 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:name="morris.com.voucher.fragment.FormsByUserFragment"
-    tools:context="morris.com.voucher.fragment.FormsByUserFragment">
+    android:name="morris.com.voucher.fragment.AssessmentsByUserFragment"
+    tools:context="morris.com.voucher.fragment.AssessmentsByUserFragment">
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <Button
-            android:id="@+id/addNew"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="5dp"
-            android:text="Add New" />
-        <Button
-            android:id="@+id/getForms"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="5dp"
-            android:text="Get Forms" />
-        <Button
-            android:id="@+id/myAssessments"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="5dp"
-            android:text="My Assessments" />
+
         <Button
             android:id="@+id/syncData"
             android:layout_width="match_parent"
@@ -48,7 +31,7 @@
     android:layout_marginTop="20dp"
     android:layout_marginRight="4dp"
     android:shadowColor="@color/colorPrimary"
-    android:text="REGISTRATION FORMS"
+    android:text="ASSESSMENT FORMS"
     android:textAllCaps="true"
     android:textColor="@color/colorPrimary"
     android:textSize="18dp"
@@ -66,23 +49,16 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="left"
-            android:text="First Name"
+            android:text="Name"
             android:textColor="@android:color/white" />
+
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="left"
-            android:text="Last Name"
-            android:textColor="@android:color/white" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="left"
-            android:text="ID Number"
+            android:text="Pregnant"
             android:textColor="@android:color/white" />
 
         <TextView
@@ -93,10 +69,14 @@
             android:gravity="right"
             android:text="Status"
             android:textColor="@android:color/white" />
-        <Space
+        <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            />
+            android:id="@+id/povertyScore"
+            android:layout_weight="1"
+            android:gravity="right"
+            android:text="Score"
+            android:textColor="@android:color/white" />
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -108,10 +88,10 @@
     </TableRow>
     </TableLayout>
 <android.support.v7.widget.RecyclerView
-    android:id="@+id/recycler_forms_by_user"
+    android:id="@+id/recycler_assessments_by_user"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     app:layoutManager="LinearLayoutManager"
-    tools:listitem="@layout/single_form_recycler_view" />
+    tools:listitem="@layout/single_assessment_recycler_view" />
 
 </LinearLayout>
