--- a/app/src/main/res/layout/single_assessment_recycler_view.xml
+++ b/app/src/main/res/layout/single_assessment_recycler_view.xml
@@ -17,31 +17,30 @@
             >
 
             <TextView
-                android:id="@+id/recycler_fname"
-                android:layout_weight="1"
+                android:id="@+id/recycler_name"
+                android:layout_weight="2"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:gravity="left"
                 android:textColor="@color/colorBlack" />
 
             <TextView
-                android:id="@+id/recycler_lname"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="left"
-                android:textColor="@color/colorBlack" />
-
-            <TextView
-                android:id="@+id/recycler_idnum"
+                android:id="@+id/recycler_score"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:layout_width="0dp"
                 android:gravity="left"
                 android:textColor="@color/colorBlack" />
+            <TextView
+                android:id="@+id/recycler_pregnancy"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:gravity="left"
+                android:textColor="@color/colorBlack" />
 
             <TextView
-                android:id="@+id/status"
+                android:id="@+id/assessment_status"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:layout_width="0dp"
@@ -49,18 +48,12 @@
                 android:textColor="@color/colorAccent"/>
 
             <Button
-                android:id="@+id/assessClient"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="assess" />
-
-            <Button
-                android:id="@+id/edit"
+                android:id="@+id/editAssessment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="edit" />
             <Button
-                android:id="@+id/sentToServer"
+                android:id="@+id/sentToAssessmentServer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="STS" />
