--- a/app/src/main/res/layout/fragment_assess_client.xml
+++ b/app/src/main/res/layout/fragment_assess_client.xml
@@ -3,7 +3,7 @@
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="fill_parent"
 android:layout_height="wrap_content"
-tools:context="morris.com.voucher.fragment.RegisterClientFragment"
+tools:context="morris.com.voucher.fragment.AssessClientFragment"
 android:background="#ffffff"
 android:alpha="0.95"
     android:layout_below="@id/dashboard_tabs">
