--- a/app/src/main/res/layout/single_claim_recycler_view.xml
+++ b/app/src/main/res/layout/single_claim_recycler_view.xml
@@ -4,7 +4,7 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     >
-    <ScrollView
+      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
     <TableLayout
@@ -18,7 +18,8 @@
 
             <TextView
                 android:id="@+id/recycler_voucher_type"
-                android:layout_weight="1"
+                android:layout_weight="3"
+                android:layout_marginTop="10dp"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:gravity="left"
@@ -39,14 +40,20 @@
                 />
 
 
-            <Button
-                android:id="@+id/redeemClaim"
+            <Switch
+                android:id="@+id/redeemedSwitch"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:layout_marginTop="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="redeem" />
+                android:theme="@style/SwitchTheme"
+                android:switchMinWidth="50dp"
+                android:checked="false"
+               />
 
 
         </TableRow>
     </TableLayout>
-    </ScrollView>
+  </LinearLayout>
 </LinearLayout>
