Part Work on Validation'

--- a/app/src/main/res/layout/fragment_assessment_by_user.xml
+++ b/app/src/main/res/layout/fragment_assessment_by_user.xml
@@ -94,4 +94,14 @@
     app:layoutManager="LinearLayoutManager"
     tools:listitem="@layout/single_assessment_recycler_view" />
 
+    <ProgressBar
+        android:id="@+id/assessmentProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center"
+        android:visibility="invisible"
+        />
+
+
 </LinearLayout>
