--- a/app/src/main/res/layout/fragment_forms_by_user.xml
+++ b/app/src/main/res/layout/fragment_forms_by_user.xml
@@ -114,4 +114,14 @@
     app:layoutManager="LinearLayoutManager"
     tools:listitem="@layout/single_form_recycler_view" />
 
+    <ProgressBar
+        android:id="@+id/simpleProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center"
+        android:visibility="invisible"
+
+        />
+
 </LinearLayout>
