--- a/app/src/main/res/layout/fragment_redeem_claim.xml
+++ b/app/src/main/res/layout/fragment_redeem_claim.xml
@@ -16,68 +16,49 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="0dp"
-        android:layout_marginBottom="0dp"
         android:id="@+id/staticData"
         android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:padding="20dp"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/claimFirstName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:textColor="@color/forest_green"
-            android:textSize="15dp"
-            />
-        <Space
-            android:layout_width="15dp"
-            android:layout_height="match_parent"
-             />
-        <TextView
-            android:id="@+id/claimLastName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:textColor="@color/forest_green"
-            android:textSize="15dp"
-            />
-        <Space
-            android:layout_width="15dp"
-            android:layout_height="match_parent"
-        />
-        <TextView
-            android:id="@+id/claimIdNumber"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:textColor="@color/forest_green"
-            android:textSize="15dp"
-            />
+        <TableLayout
+            android:layout_width="fill_parent"
+            android:stretchColumns="*"
+            android:layout_height="match_parent">
 
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="20dp"
-        android:orientation="horizontal">
+        <TableRow
+            android:background="@color/colorWhite"
+            android:padding="8dp">
+            <TextView
+                android:id="@+id/claimFirstName"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textStyle="bold"
+                android:textColor="@color/forest_green"
+                android:textSize="15dp" />
 
-        <Button
-            android:id="@+id/saveClaim"
-            android:layout_width="match_parent"
-            android:background="@color/colorBack"
-            android:layout_gravity="right"
-            android:layout_height="wrap_content"
-            android:textSize="15dp"
-            android:textColor="@color/colorWhite"
-            android:text="REDEEM CLAIM" />
+            <TextView
+                android:id="@+id/claimLastName"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textStyle="bold"
+                android:textColor="@color/forest_green"
+                android:textSize="15dp" />
+            <Button
+                android:id="@+id/saveClaim"
+                android:layout_width="0dp"
+                android:layout_weight="2"
+                android:background="@color/colorBack"
+                android:layout_gravity="left"
+                android:layout_height="wrap_content"
+                android:textSize="15dp"
+                android:textColor="@color/colorWhite"
+                android:text="REDEEM CLAIM" />
 
-    </LinearLayout>
+        </TableRow>
+
+        </TableLayout>
     </LinearLayout>
 
     <LinearLayout
